# cpex-test-plugin

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
cpex_test_plugin/: __init__.py  config.yaml  plugin-manifest.yaml  plugin.py  requirements.txt  versions.json
tests/: test_plugin.py
